--- a/views/shop/shopping-cart.hbs
+++ b/views/shop/shopping-cart.hbs
@@ -92,10 +92,8 @@
                 {{# each products }}
                 <div class="product">
                   <div class="product-details">
-
                       <div class="product-title"><h2>{{ this.item.Title }}</h2>
                     </div>
-
                   </div>
                 <div class="product-price"><h2>${{ this.Price }}.00<h2></div>
                   <div class="product-quantity"><h2>{{ this.qty }}<h2></div>
@@ -105,7 +103,7 @@
 </div>
 <div class="row">
     <div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
-      <div class="product-line-price"><b><h2>Total:${{ totalPrice }}.00</b></h2></div>
+      <div class="product-line-price"><b><h2>Total:${{ totalPrice }}.00</h2></b></div>
     </div>
     </div>
     <div class="row">
