--- a/views/layouts/aboutus.hbs
+++ b/views/layouts/aboutus.hbs
@@ -26,7 +26,6 @@
             opacity: 0.7;
             z-index: 9999;
         }
-
         #dlgbox{
             {{! The dialog box appers after when try to add something to the cart!}}
             display: none;
@@ -36,7 +35,6 @@
             border-radius: 20px;
             background-color: transparent;
         }
-
         #dlg-header{
             background-color: #003366;
             color: white;
@@ -44,7 +42,6 @@
             padding: 10px;
             margin: 10px 10px 0px 10px;
         }
-
         #dlg-body{
             background-color: #6897bb;
             color: black;
@@ -52,14 +49,12 @@
             padding: 10px;
             margin: 0px 10px 0px 10px;
         }
-
         #dlg-footer{
             background-color: #3b5998;
             text-align: right;
             padding: 10px;
             margin: 0px 10px 10px 10px;
         }
-
         .footer {
             position: fixed;
             left: 0;
@@ -70,7 +65,6 @@
             color: whitesmoke;
             text-align: center;
         }
-
     </style>
 
 </head>
@@ -137,12 +131,26 @@
 	  </div>
 	</div>
 <br><br>
-	<header>
+<header>
 		<div class="caption">
-	<h1>Architecture</h1>
+	<h1>Project Desription!</h1>
+  <h3> <a> We have named our e-commerce website as "the-TV-store" which allows customer to create their profile and then purchase the TV from website.
+    <br><br>
+
+    Components used are:<br>
+    No SQL DB - MongoDb<br>
+    Search system: Elastic search<br>
+    Cache system: Redis Cache<br>
+    Content Delivery Network - Cloudfront<br>
+    Web hosting Platform: Heroku<br> </h3>
+
 	</div>
+  <div class="card">
+    <img src="images\architecture image.JPG" alt="Yashjeet Singh" style="width:100%">
 	</header>
 	  </div>
+      <h2>Find our complete project here  <a href="https://github.com/YashjeetSingh/the-TV-store/"style='color: navy';> <i class="fa fa-github" style="font-size:24px;"></i></a><br>
+</div>
 </body>
 <br><br><br><br><br><br>
 <div class="footer" style="font-size:180%;" style="padding-top: 10px;">
