--- a/views/layouts/aboutus.hbs
+++ b/views/layouts/aboutus.hbs
@@ -132,13 +132,11 @@
 	</div>
 <br><br>
 <header>
-		<div class="caption">
-	<h1>Project Desription!</h1>
-  <h3> <a> We have named our e-commerce website as "the-TV-store" which allows customer to create their profile and then purchase the TV from website.
-    <br><br>
-
-    Components used are:<br>
-    No SQL DB - MongoDb<br>
+  <div class="caption">
+<h1>Components!</h1>
+</div>
+</header>
+No SQL DB - MongoDb<br>
     Search system: Elastic search<br>
     Cache system: Redis Cache<br>
     Content Delivery Network - Cloudfront<br>
@@ -147,7 +145,7 @@
 	</div>
   <div class="card">
     <img src="images\architecture image.JPG" alt="Yashjeet Singh" style="width:100%">
-	</header>
+
 	  </div>
       <h2>Find our complete project here  <a href="https://github.com/YashjeetSingh/the-TV-store/"style='color: navy';> <i class="fa fa-github" style="font-size:24px;"></i></a><br>
 </div>
