--- a/views/layouts/aboutus.hbs
+++ b/views/layouts/aboutus.hbs
@@ -136,11 +136,11 @@
 <h1>Components!</h1>
 </div>
 </header>
-No SQL DB - MongoDb<br>
+<center><h3>No SQL Database: MongoDB</h3><br>
     Search system: Elastic search<br>
     Cache system: Redis Cache<br>
     Content Delivery Network - Cloudfront<br>
-    Web hosting Platform: Heroku<br> </h3>
+    Web hosting Platform: Heroku<br> </h3></center>
 
 	</div>
   <div class="card">
