--- a/views/layouts/aboutus.hbs
+++ b/views/layouts/aboutus.hbs
@@ -135,14 +135,14 @@
   <div class="caption">
 <h1>Components!</h1>
 </div>
-</header>
-<center><h3>No SQL Database: MongoDB</h3><br>
+</header><br><br>
+<center><h3>No SQL Database: MongoDB<br>
     Search system: Elastic search<br>
     Cache system: Redis Cache<br>
     Content Delivery Network - Cloudfront<br>
     Web hosting Platform: Heroku<br> </h3></center>
 
-	
+
   <div class="card">
     <img src="images\architecture image.JPG" alt="Yashjeet Singh" style="width:100%">
 
