--- a/views/layouts/aboutus.hbs
+++ b/views/layouts/aboutus.hbs
@@ -140,14 +140,13 @@
     Search system: Elastic search<br>
     Cache system: Redis Cache<br>
     Content Delivery Network - Cloudfront<br>
-    Web hosting Platform: Heroku<br> </h3></center>
-
-
+    Web hosting Platform: Heroku<br> </h3>
+  <br><br>
+  <h2>Find our complete project here :<a href="#"style='color: navy';> <i class="fa fa-github" style="font-size:24px;"></i></a><br></h2>
+  <h2>Find our complete project here :<a href="https://github.com/YashjeetSingh/the-TV-store/"style='color: navy';> <i class="fa fa-github" style="font-size:24px;"></i></a><br></h2></center>
   <div class="card">
     <img src="images\architecture image.JPG" alt="Yashjeet Singh" style="width:100%">
-
 	  </div>
-      <h2>Find our complete project here  <a href="https://github.com/YashjeetSingh/the-TV-store/"style='color: navy';> <i class="fa fa-github" style="font-size:24px;"></i></a><br>
 </div>
 </body>
 <br><br><br><br><br><br>
