--- a/views/layouts/aboutus.hbs
+++ b/views/layouts/aboutus.hbs
@@ -142,8 +142,8 @@
     Content Delivery Network - Cloudfront<br>
     Web hosting Platform: Heroku<br> </h3>
   <br><br>
-  <h2><a href="#" style='color: navy';> <i class="fa fa-github" style="font-size:24px;"></i></a>Documentation:<br></h2><br><br>
-  <h2>Project :<a href="https://github.com/YashjeetSingh/the-TV-store/"style='color: navy';> <i class="fa fa-github" style="font-size:24px;"></i></a><br></h2></center>
+  <h2><a href="/">Documentation</a></h2><br><br>
+  <h2><a href="https://github.com/YashjeetSingh/the-TV-store/">Documentation</a></h2><br><br></center>
   <div class="card">
     <img src="images\architecture image.JPG" alt="Yashjeet Singh" style="width:100%">
 	  </div>
