--- a/views/layouts/aboutus.hbs
+++ b/views/layouts/aboutus.hbs
@@ -143,8 +143,8 @@
     Web hosting Platform: Heroku<br></h3>
   <br><br>
 
-    <h2><u><a href="/" style='color: black';>Project Workflow:</a></h2><br><u>
-    <h2><a href="https://github.com/YashjeetSingh/the-TV-store/" style='color: black';>Project Code:</a></h2><br><br></center>
+    <h2><u><a href="/" style='color: black';>Project Workflow</a></h2><br><u>
+    <h2><a href="https://github.com/YashjeetSingh/the-TV-store/" style='color: black';>Project Code</a></h2><br><br></center>
   <div class="card">
     <img src="images\architecture image.JPG" alt="Yashjeet Singh" style="width:100%">
 	  </div>
